# odoo-ai-ecosystem

./: .gitignore  CLAUDE.md  README.md  __init__.py  __manifest__.py  const.py
.claude/: marca-tarea.sh  settings.json  statusline-tarea.sh
conector-odoo/: .gitignore  README.md  profiles.yml  pyproject.toml
conector-odoo/src/conector_odoo/: __init__.py  client.py  server.py
conector-odoo/tests/: test_client.py  test_server.py
controllers/: __init__.py  main.py
data/: payment_provider_data.xml
demo/: payment_provider_demo.xml
doc/: index.rst
docs/: 00-arquitectura.md  ROADMAP.md  agregar-tecnologia.md  instalacion-otra-maquina.md
docs/estandares/: git-commits.md  modelos-por-proceso.md  plantilla-diseno.md  plantilla-manual-prueba.md  plantilla-tarea.md
docs/fases/: 01-gentle-ai.md  02-odoo-gestor.md  03-conector-odoo.md  04-auditoria.md  04-entornos-dev.md  05-flujo-desarrollo.md  06-manual-generator.md  07-tokens.md
docs/tareas/: README.md
entornos/: GUIA-AGENTES.md  README.md  bootstrap.sh
entornos/templates/: Dockerfile  docker-compose.compose.yml  (+6 more)
gestor-odoo/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  requirements.txt
i18n/: es.po
manual-generator/: README.md  package-lock.json  package.json
models/: __init__.py  payment_provider.py  payment_token.py  payment_transaction.py
tests/: __init__.py  common.py  test_itbis.py  test_payment_provider.py  test_payment_transaction.py  test_processing_flows.py
views/: payment_azul_templates.xml  payment_provider_views.xml  payment_transaction_views.xml
(+39 files in other folders)
