[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conector-odoo"
version = "0.1.0"
description = "Cliente Odoo XML-RPC por perfiles expuesto como servidor MCP (stdio)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
conector-odoo-mcp = "conector_odoo.server:main"

[tool.setuptools.packages.find]
where = ["src"]
